Added implementation from my test HTML client, which was in turn pulled from the Alert camera gadget, which is the latest code. Added JSLint to the build and fixed a bunch of its complaints. Added Prototype as a runtime dependency.

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Alert.js" default="merge" basedir=".">
+<project name="Alert.js" default="static-analysis" basedir=".">
     <description>
     Build file for the Alert.js project.
     </description>
@@ -6,20 +6,35 @@
 	<property name="src.dir" value="src"/>
 	<property name="target.dir" value="target"/>
 	
+	<!-- http://jslint4java.googlecode.com/svn/docs/1.4/ant.html -->
+	<taskdef name="jslint"
+           classname="com.googlecode.jslint4java.ant.JSLintTask"
+           classpath="lib/build/jslint4java-2.0.0.jar" />
+	
 	<target name="clean" description="Cleans all build output">
 		<delete dir="${target.dir}"/>
 	</target>
 	
+	<target name="static-analysis" description="Runs jslint on the sources">
+		<jslint options="vars,sloppy,white,plusplus">
+			<formatter type="plain" />
+			<predef>
+				, loggerCtor, browserLocalStorageCtor, httpClientCtor, authServiceCtor,
+				siteServiceCtor, clipServiceCtor, NetService, Ajax, console,
+			</predef>
+			<fileset dir="${src.dir}" includes="**/*.js" />
+		</jslint>
+	</target>
+	
 	<target name="merge" description="Merges all .js files">
-		<concat destfile="${target.dir}/alert.js">
+		<concat destfile="${target.dir}/alert.js" fixlastline="yes">
 			<fileset dir="${src.dir}" includes="**/*.js" />
 		</concat>
 	</target>
 	
 	<target name="minify" depends="merge" description="Minifies the single merged .js file">
-		<!-- TODO -->
 		<apply executable="java" parallel="false">
-			<filelist dir="build" files="alert.js" />
+			<filelist dir="${target.dir}" files="alert.js" />
 			<arg line="-jar" />
 			<arg path="lib/build/yuicompressor-2.4.6.jar" />
 			<srcfile />
